Refactor get method + fix dto's

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
     <properties>
         <java.version>1.8</java.version>
         <modelmapper.version>2.3.2</modelmapper.version>
+        <sonar.jdbc.username>admin</sonar.jdbc.username>
+        <sonar.jdbc.password>admin</sonar.jdbc.password>
+        <sonar.dynamic>reuseReports</sonar.dynamic>
     </properties>
 
     <dependencies>
@@ -55,6 +58,11 @@
             <artifactId>modelmapper</artifactId>
             <version>${modelmapper.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -63,7 +71,36 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.4</version>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.6.0.1398</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 </project>
